NetBSD does not have MSG_NOSIGNAL, so just define it as 0

BUG: 139110


svn path=/trunk/extragear/network/ktorrent/; revision=616060